# ocr

./: .gitignore  CMakeLists.txt  README.md
api/: http_server.h  json_write.cpp  ocr_server.cpp
board_deploy/testdata/: auto_mode_1_1024x768.bgr888  auto_mode_2_1024x768.bgr888  full_test_1024x384.bgr888  normal_run_1024x768.bgr888
cpp/: CMakeLists.txt
cpp/api/: http_server.cpp  json_write.h  ocr_server.cpp
cpp/automation/: json_value.cpp  json_value.h  kvm_sequence.cpp  rule.cpp  rule.h
cpp/board_deploy/: automation_runner
cpp/board_deploy/testdata/: alarm_1024x768.bgr888
cpp/ocr/: benchmark.cpp  ppocr_rec.h  ppocr_system.cpp  ppocr_system.h
model/: PP-OCRv6_tiny_det_rk3588.rknn  PP-OCRv6_tiny_rec_rk3588.rknn
pipeline/automation/: automation_runner.cpp  kvm_sequence.h  rule_matcher.cpp  rule_matcher.h  screens.cpp  screens.h
pipeline/ocr/: alarm_detector.cpp  alarm_detector.h  image_io.cpp  image_io.h  ppocr_det.cpp  ppocr_det.h  ppocr_rec.cpp  preprocess.cpp  preprocess.h  rknn_executor.cpp  rknn_executor.h  text_correction.cpp  text_correction.h
python/: alarm_detector.py  auto_extractor.py  check0_base_optimize.onnx  check2_correct_ops.onnx  check3_fuse_ops.onnx  convert_v6_tiny_rec.py  ppocr_benchmark.py  ppocr_system.py
test/: alarm_test.py  auto_compare.py  ocr_dump.py  ppocr_benchmark.py
